# VIVO-RUN

./: DEPLOY_VIA_BROWSER.md  INTEGRATION_STATUS.md  KEYS_AND_DEPLOYMENT.md  package-lock.json
.history/: .gitignore_20251110185240  DEPLOYMENT_GUIDE_20251110212321.md  QUICK_DEPLOY_20251110212256.md  README_20251110184043.md  README_20251110193608.md  WALLET_SETUP_20251110210400.md  index_20251110184016.html  index_20251110190554.html  index_20251110190558.html  index_20251110211100.html  index_20251110220602.html  package_20251110184022.json  package_20251110184217.json  package_20251110184446.json  package_20251110184536.json  package_20251110184633.json  package_20251110184742.json  package_20251110184950.json  package_20251110185427.json  package_20251110185721.json  package_20251110212248.json  tsconfig.app_20251110190218.json  vite.config_20251110190643.ts
.history/contracts/: Cargo_20251110184801.toml
.history/public/scripts/: game_20251110190431.js  game_20251110190439.js  game_20251110190449.js  (+16 more)
.history/scripts/: deploy-contract_20251110212227.ps1
.history/src/: App_20251110185939.tsx  App_20251110185942.tsx  App_20251110185946.tsx  App_20251110190006.tsx  App_20251110190023.tsx  App_20251110190105.tsx  App_20251110205355.css  App_20251110211022.tsx  App_20251110211028.tsx  App_20251110211030.tsx  App_20251110211437.tsx
contracts/: README.md
contracts/vivo_run_game/: Cargo.toml
public/scripts/: mainMenuButtons.js  walletStatusSync.js
scripts/: deploy-contract.ps1  deploy-contract.sh
src/utils/: stellar-client.ts  stellar-soroban-client.ts
(+41 files in other folders)
