[package]
name = "vivo_run_game"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "vivo_run_game"

[dependencies]
soroban-sdk = "21.3.0"

[dev_dependencies]
soroban-sdk = { version = "21.3.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

